# ESP32-P4-EYE

./: CMakeLists.txt  README.md  output.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera_capture.c  camera_capture.h  camera_init.c  camera_init.h  camera_sensor.c  camera_sensor.h  esp32_p4_eye_audio.c  esp32_p4_eye_audio.h  idf_component.yml  main.c  psram_utils.c  psram_utils.h  serial_utils.c  serial_utils.h
